# ChangeLog for dev-ruby/hoe
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.37 2008/09/03 18:41:34 graaff Exp $

  26 Sep 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
  +hoe-1.7.0.ebuild:
  Adding 19 to USE_RUBY, adding ruby 1.9 as alternative to rubygems

  03 Sep 2008; Hans de Graaff <graaff@gentoo.org> hoe-1.7.0.ebuild:
  Depend on rubygems 1.2.0 since the generated tasks depend on it. Thanks to
  Cyril Mougel for providing the information in #236444.

  08 Jul 2008; Javier Villavicencio <the_paya@gentoo.org> hoe-1.7.0.ebuild:
  Add ~x86-fbsd.

  07 Jul 2008; Friedrich Oslage <bluebird@gentoo.org> hoe-1.7.0.ebuild:
  Add ~sparc keyword, bug #230517

*hoe-1.7.0 (01 Jul 2008)

  01 Jul 2008; Hans de Graaff <graaff@gentoo.org> +hoe-1.7.0.ebuild:
  Version bump with 3 minor enhancements:
    * Use rdoc 2.x gem if available. Eric likes his backslashes.
    * Added extra_dev_deps for new rubygems developer dependencies.
    * Finally got a sane test that does something. Hey... it's a start.

*hoe-1.6.0 (18 Jun 2008)

  18 Jun 2008; Hans de Graaff <graaff@gentoo.org> +hoe-1.6.0.ebuild:
  Version bump: adds blog categories.

*hoe-1.5.3 (22 May 2008)

  22 May 2008; Hans de Graaff <graaff@gentoo.org> +hoe-1.5.3.ebuild:
  Version bump: minor bugfixes

  22 May 2008; Hans de Graaff <graaff@gentoo.org> -hoe-1.2.2.ebuild,
  -hoe-1.3.0.ebuild, -hoe-1.5.0.ebuild:
  Remove old versions

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> hoe-1.5.1.ebuild:
  ia64 stable wrt #217389

  13 Apr 2008; Markus Rothe <corsair@gentoo.org> hoe-1.5.1.ebuild:
  Stable on ppc64; bug #217389

  12 Apr 2008; Dawid Węgliński <cla@gentoo.org> hoe-1.5.1.ebuild:
  Stable on x86 (bug #217389)

  12 Apr 2008; nixnut <nixnut@gentoo.org> hoe-1.5.1.ebuild:
  Stable on ppc wrt bug 217389

  12 Apr 2008; Hans de Graaff <graaff@gentoo.org> hoe-1.5.1.ebuild:
  Mark stable on amd64, bug #217389
