@@ -1,4 +1,4 @@
-DIST hoe-1.7.0.gem 17408 RMD160 7b00576d800162a8e25b0404e9ceab4bbeec3a04 SHA1 50375588517a94962c59566f79a1301d95eb459a SHA256 ba77b6d853efc69cd04376e33b54c25b031f41b00d632c35e54e92ec7cfe3bcd
-EBUILD hoe-1.7.0.ebuild 566 RMD160 8348da9de73ccabc1c047612d98f8d8a95f3722f SHA1 3731df5c3e1689c75a580611cb16c77a06700e9a SHA256 1caecb118e4364a289c5b87b0c7447d09dde969f2836159deafcae8f236781f0
-MISC ChangeLog 5006 RMD160 9dc52e1c52c2b8f5c5627f39755480acc6600f2d SHA1 a62140ad46a17b4379eff9962875d1c1a18c5e36 SHA256 dd2a731290b3d69db4f1c0c2074d9f8bfadc31a2b2a7c4e86e5efdf59306edd3
+DIST hoe-1.8.0.gem 18944 RMD160 e9dda5631797d4602b0773aea80d98b2fee512e5 SHA1 b1567782b0f8ba90a7df05577ea43da4e0a08c4e SHA256 c452d757b83bf613a7db432a9b5e40ddc5da1f1d4f1157ee5c21740753858f3d
+EBUILD hoe-1.8.0-r30.ebuild 539 RMD160 44ead40709660b3bf4a12775398d8ee28daaf83b SHA1 0fd519f8f0f1eb578e7c328e411aac425528b01a SHA256 dd89625d42862a5ddc68b612ecce1fe184f04ebd94a51075e1c434d99d44313c
+MISC ChangeLog 5146 RMD160 36122b726694b1166654b653cce67eae6e32a47c SHA1 ebc4baad8d50ce8ec71a4584f486121f74f6fbcb SHA256 93369849fc606b4fe70ba1681f45b87c5f2b546fbd64bca4f459d51d8eea9e4a
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
