@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/hoe-1.7.0.ebuild,v 1.4 2008/09/03 18:41:34 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/hoe-1.8.0.ebuild,v 1.1 2008/10/14 07:02:20 graaff Exp $
 
 inherit gems
 
@@ -14,6 +14,6 @@ SLOT="0"
 KEYWORDS="~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE=""
 
-DEPEND=">=dev-ruby/rake-0.8.1
+DEPEND=">=dev-ruby/rake-0.8.3
 	>=dev-ruby/rubyforge-1.0.0
-	|| ( >=dev-ruby/rubygems-1.2.0 =dev-lang/ruby-1.9* )"
+	>=dev-ruby/rubygems-1.2.0"
