@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.37 2008/09/03 18:41:34 graaff Exp $
 
+  19 Oct 2008; Alex Legler <gentoo@a3li.info> -hoe-1.7.0.ebuild,
+  +hoe-1.8.0-r30.ebuild:
+  Purging old; Version bump; Distinction revbump
+
   26 Sep 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
   +hoe-1.7.0.ebuild:
   Adding 19 to USE_RUBY, adding ruby 1.9 as alternative to rubygems
